--- a/index.html
+++ b/index.html
@@ -10,101 +10,111 @@
 
 <body>
 
-    <div class="sidebar">
-        <div class="logo"> Dashboard </div>
-        <div class="side-content">Home</div>
-        <div class="side-content">Profile</div>
-        <div class="side-content">Messages</div>
-        <div class="side-content">History</div>
-        <div class="side-content">Tasks</div>
-        <div class="side-content">Communities</div>
-        <div class="side-content">Settings</div>
-        <div class="side-content">Support</div>
-        <div class="side-content">Privacy</div>
-    </div>
+    <div class="container">
+        <div class="sidebar">
+            <div class="dashboard"> <img src = "svg/view-dashboard.svg"> <p> Dashboard </p> </div>
+            
+            <div class="homeIcon"><img src="svg/home.svg"> <p>Home</p></div>
+            <div class="profile"><img src="svg/face-man-profile.svg"><p>Profile</p></div>
+            <div class="messages"><img src="svg/message.svg"><p>Messages</p></div>
+            <div class="history"><img src="svg/history.svg"><p>History</p></div>
+            <div class="tasks"><img src="svg/tasks.svg"><p>Tasks</p></div>
+            <div class="communities"><img src="svg/community.svg"><p>Communities</p></div>
+            
+            <div class="settings"><img src="svg/settings.svg"><p>Settings</p></div>
+            <div class="support"><img src="svg/support.svg"><p>Support</p></div>
+            <div class="privacy"><img src="svg/privacy.svg"><p>Privacy</p></div>
+        </div>
+        <div class="header">
 
-    <div class="header">
-        <div><label for="gsearch">🔎</label>
-            <input type="search" id="gsearch" name="gsearch">
+            <div class="labelDiv">
+                <label for="gsearch"><img src="svg/search.svg"></label>
+                <input type="search" id="gsearch" name="gsearch">
+            </div>
+            <div class="name-img-Div">
+                <img src="svg/notificationBell.svg" alt="notification Bell">
+                <img class="catAvatar" src="img/cat.jpg" alt="cat avatar">
+                <p>Rupesh Sagaram</p>
+            </div>
+            <div class="header3rdDiv">
+                <img class="catAvatar" src="img/cat.jpg" alt="cat avatar">
+                <p>Hi there,</p>
+                <p>Rupesh Sagaram (@rupesh)</p>
+            </div>
+            <div class="buttonDiv">
+            <div><button type="button">New</button></div>
+            <div><button type="button">Upload</button></div>
+            <div><button type="button">Share</button></div>
         </div>
-        <div>Rupesh Sagaram</div>
-        <div>
-            <p>Hi there!,</p>
-            <p>Rupesh Sagaram (@rupesh)</p>
         </div>
-        <div><button type="button">New</button></div>
-        <div><button type="button">Upload</button></div>
-        <div><button type="button">Share</button></div>
-    </div>
-
-    <div class="projects">
-        <div>
-            <h4>Travel Signup Page</h4>
-            <p> travel page invites users to discover personalized, breathtaking escapes, offering easy signup for
-                adventure, relaxation, and unforgettable experiences.</p>
+        <div class="projects">
+            <div>
+                <h4>Travel Signup Page</h4>
+                <p> travel page invites users to discover personalized, breathtaking escapes, offering easy signup for
+                    adventure, relaxation, and unforgettable experiences.</p>
+            </div>
+            <div>
+                <h4>Calculator</h4>
+                <p>A simple and efficient calculator app that allows users to perform basic arithmetic operations quickly
+                    and accurately on the go.</p>
+            </div>
+            <div>
+                <h4>Etch-a-sketch</h4>
+                <p>Etch-a-Sketch page allows users to draw digital sketches by manipulating controls, providing a fun and
+                    interactive creative experience.</p>
+            </div>
+            <div>
+                <h4>Rock paper scissors</h4>
+                <p>A simple Rock Paper Scissors game webpage where users can play, test their luck, and enjoy quick rounds
+                    of interactive fun!</p>
+            </div>
+            <div>
+                <h4>Landing page</h4>
+                <p> landing page promotes compassionate therapy services, offering a safe space and various therapeutic
+                    approaches to support personal growth and healing.
+                </p>
+            </div>
+            <div>
+                <h4>Odin recipes</h4>
+                <p> recipes page features two delicious and easy-to-follow recipes, helping users create tasty meals with
+                    step-by-step instructions.</p>
+            </div>
         </div>
-        <div>
-            <h4>Calculator</h4>
-            <p>A simple and efficient calculator app that allows users to perform basic arithmetic operations quickly
-                and accurately on the go.</p>
+        <div class="announcements">
+            <div>
+                <h4>Site Maintenance</h4>
+                <p>Our website will undergo maintenance in 2 days to enhance performance and security. Expect brief downtime
+                    during the process.</p>
+            </div>
+            <div>
+                <h4>Community Share Day</h4>
+                <p>Community Share Day is a local event where people come together to exchange resources, ideas, and
+                    support, fostering unity and collaboration.</p>
+            </div>
+            <div>
+                <h4>Updated Privacy Policy</h4>
+                <p>We’ve updated our Privacy Policy to enhance transparency regarding data collection, usage, and user
+                    rights. Please review the changes carefully.</p>
+            </div>
         </div>
-        <div>
-            <h4>Etch-a-sketch</h4>
-            <p>Etch-a-Sketch page allows users to draw digital sketches by manipulating controls, providing a fun and
-                interactive creative experience.</p>
-        </div>
-        <div>
-            <h4>Rock paper scissors</h4>
-            <p>A simple Rock Paper Scissors game webpage where users can play, test their luck, and enjoy quick rounds
-                of interactive fun!</p>
-        </div>
-        <div>
-            <h4>Landing page</h4>
-            <p> landing page promotes compassionate therapy services, offering a safe space and various therapeutic
-                approaches to support personal growth and healing.
-            </p>
-        </div>
-        <div>
-            <h4>Odin recipes</h4>
-            <p> recipes page features two delicious and easy-to-follow recipes, helping users create tasty meals with
-                step-by-step instructions.</p>
-        </div>
-    </div>
-
-    <div class="announcements">
-        <div>
-            <h4>Site Maintenance</h4>
-            <p>Our website will undergo maintenance in 2 days to enhance performance and security. Expect brief downtime
-                during the process.</p>
-        </div>
-        <div>
-            <h4>Community Share Day</h4>
-            <p>Community Share Day is a local event where people come together to exchange resources, ideas, and
-                support, fostering unity and collaboration.</p>
-        </div>
-        <div>
-            <h4>Updated Privacy Policy</h4>
-            <p>We’ve updated our Privacy Policy to enhance transparency regarding data collection, usage, and user
-                rights. Please review the changes carefully.</p>
-        </div>
-    </div>
-
-    <div>
-        <div>
-            <h5>@tegan</h5>
-            <p>World Peace Builder</p>
-        </div>
-        <div>
-            <h5>@rupesh</h5>
-            <p>Super Cool Project</p>
-        </div>
-        <div>
-            <h5>@alex</h5>
-            <p>Life Changing App</p>
-        </div>
-        <div>
-            <h5>@kendall</h5>
-            <p>No Traffic Maker </p>
+        <div class="trending">
+            <h4>Trending</h4>
+            <div>
+                <h5>@tegan</h5>
+                <p>World Peace Builder</p>
+            </div>
+            <div>
+                <h5>@rupesh</h5>
+                <p>Super Cool Project</p>
+            </div>
+            <div>
+                <h5>@alex</h5>
+                <p>Life Changing App</p>
+            </div>
+            <div>
+                <h5>@kendall</h5>
+                <p>No Traffic Maker </p>
+            </div>
         </div>
     </div>
 
