--- a/index.html
+++ b/index.html
@@ -12,18 +12,38 @@
 
     <div class="container">
         <div class="sidebar">
-            <div class="dashboard"> <img src = "svg/view-dashboard.svg"> <p> Dashboard </p> </div>
-            
-            <div class="homeIcon"><img src="svg/home.svg"> <p>Home</p></div>
-            <div class="profile"><img src="svg/face-man-profile.svg"><p>Profile</p></div>
-            <div class="messages"><img src="svg/message.svg"><p>Messages</p></div>
-            <div class="history"><img src="svg/history.svg"><p>History</p></div>
-            <div class="tasks"><img src="svg/tasks.svg"><p>Tasks</p></div>
-            <div class="communities"><img src="svg/community.svg"><p>Communities</p></div>
-            
-            <div class="settings"><img src="svg/settings.svg"><p>Settings</p></div>
-            <div class="support"><img src="svg/support.svg"><p>Support</p></div>
-            <div class="privacy"><img src="svg/privacy.svg"><p>Privacy</p></div>
+            <div class="dashboard"> <img src="svg/view-dashboard.svg">
+                <p> Dashboard </p>
+            </div>
+
+            <div class="homeIcon"><img src="svg/home.svg">
+                <p>Home</p>
+            </div>
+            <div class="profile"><img src="svg/face-man-profile.svg">
+                <p>Profile</p>
+            </div>
+            <div class="messages"><img src="svg/message.svg">
+                <p>Messages</p>
+            </div>
+            <div class="history"><img src="svg/history.svg">
+                <p>History</p>
+            </div>
+            <div class="tasks"><img src="svg/tasks.svg">
+                <p>Tasks</p>
+            </div>
+            <div class="communities"><img src="svg/community.svg">
+                <p>Communities</p>
+            </div>
+
+            <div class="settings"><img src="svg/settings.svg">
+                <p>Settings</p>
+            </div>
+            <div class="support"><img src="svg/support.svg">
+                <p>Support</p>
+            </div>
+            <div class="privacy"><img src="svg/privacy.svg">
+                <p>Privacy</p>
+            </div>
         </div>
         <div class="header">
 
@@ -38,14 +58,13 @@
             </div>
             <div class="header3rdDiv">
                 <img class="catAvatar" src="img/cat.jpg" alt="cat avatar">
-                <p>Hi there,</p>
-                <p>Rupesh Sagaram (@rupesh)</p>
+                <p>Hi there, <br>Rupesh Sagaram (@rupesh) </p>
             </div>
             <div class="buttonDiv">
-            <div><button type="button">New</button></div>
-            <div><button type="button">Upload</button></div>
-            <div><button type="button">Share</button></div>
-        </div>
+                <div><button type="button">New</button></div>
+                <div><button type="button">Upload</button></div>
+                <div><button type="button">Share</button></div>
+            </div>
         </div>
         <div class="projects">
             <div>
@@ -55,17 +74,20 @@
             </div>
             <div>
                 <h4>Calculator</h4>
-                <p>A simple and efficient calculator app that allows users to perform basic arithmetic operations quickly
+                <p>A simple and efficient calculator app that allows users to perform basic arithmetic operations
+                    quickly
                     and accurately on the go.</p>
             </div>
             <div>
                 <h4>Etch-a-sketch</h4>
-                <p>Etch-a-Sketch page allows users to draw digital sketches by manipulating controls, providing a fun and
+                <p>Etch-a-Sketch page allows users to draw digital sketches by manipulating controls, providing a fun
+                    and
                     interactive creative experience.</p>
             </div>
             <div>
                 <h4>Rock paper scissors</h4>
-                <p>A simple Rock Paper Scissors game webpage where users can play, test their luck, and enjoy quick rounds
+                <p>A simple Rock Paper Scissors game webpage where users can play, test their luck, and enjoy quick
+                    rounds
                     of interactive fun!</p>
             </div>
             <div>
@@ -76,14 +98,16 @@
             </div>
             <div>
                 <h4>Odin recipes</h4>
-                <p> recipes page features two delicious and easy-to-follow recipes, helping users create tasty meals with
+                <p> recipes page features two delicious and easy-to-follow recipes, helping users create tasty meals
+                    with
                     step-by-step instructions.</p>
             </div>
         </div>
         <div class="announcements">
             <div>
                 <h4>Site Maintenance</h4>
-                <p>Our website will undergo maintenance in 2 days to enhance performance and security. Expect brief downtime
+                <p>Our website will undergo maintenance in 2 days to enhance performance and security. Expect brief
+                    downtime
                     during the process.</p>
             </div>
             <div>
