finished styling my projects div, moving ahead to finish last two divs

--- a/index.html
+++ b/index.html
@@ -67,79 +67,111 @@
             </div>
         </div>
         <div class="projects">
-            <div>
+            <div class="project-heading">
+                <h4>Your Projects</h4>
+            </div>
+            <div class="card">
                 <h4>Travel Signup Page</h4>
                 <p> travel page invites users to discover personalized, breathtaking escapes, offering easy signup for
                     adventure, relaxation, and unforgettable experiences.</p>
+                 <div class="imgDiv">
+                <img src="svg/bookmark-outline.svg">
+                 <img src="svg/eye-plus-outline.svg">
+                 <img src="svg/share-variant-outline.svg"> 
+                </div>  
             </div>
-            <div>
+            <div class="card">
                 <h4>Calculator</h4>
                 <p>A simple and efficient calculator app that allows users to perform basic arithmetic operations
                     quickly
                     and accurately on the go.</p>
+                    <div class="imgDiv">
+                    <img src="svg/bookmark-outline.svg">
+                 <img src="svg/eye-plus-outline.svg">
+                 <img src="svg/share-variant-outline.svg">
+                </div> 
             </div>
-            <div>
+            <div class="card">
                 <h4>Etch-a-sketch</h4>
                 <p>Etch-a-Sketch page allows users to draw digital sketches by manipulating controls, providing a fun
                     and
                     interactive creative experience.</p>
+                    <div class="imgDiv">
+                        <img src="svg/bookmark-outline.svg">
+                     <img src="svg/eye-plus-outline.svg">
+                     <img src="svg/share-variant-outline.svg">
+                    </div>
             </div>
-            <div>
+            <div class="card">
                 <h4>Rock paper scissors</h4>
                 <p>A simple Rock Paper Scissors game webpage where users can play, test their luck, and enjoy quick
                     rounds
                     of interactive fun!</p>
+                    <div class="imgDiv">
+                        <img src="svg/bookmark-outline.svg">
+                     <img src="svg/eye-plus-outline.svg">
+                     <img src="svg/share-variant-outline.svg">
+                    </div>
             </div>
-            <div>
+            <div class="card">
                 <h4>Landing page</h4>
                 <p> landing page promotes compassionate therapy services, offering a safe space and various therapeutic
                     approaches to support personal growth and healing.
                 </p>
+                <div class="imgDiv">
+                    <img src="svg/bookmark-outline.svg">
+                 <img src="svg/eye-plus-outline.svg">
+                 <img src="svg/share-variant-outline.svg">
+                </div>
             </div>
-            <div>
+            <div class="card">
                 <h4>Odin recipes</h4>
                 <p> recipes page features two delicious and easy-to-follow recipes, helping users create tasty meals
                     with
                     step-by-step instructions.</p>
+                    <div class="imgDiv">
+                        <img src="svg/bookmark-outline.svg">
+                     <img src="svg/eye-plus-outline.svg">
+                     <img src="svg/share-variant-outline.svg">
+                    </div>
             </div>
         </div>
         <div class="announcements">
-            <div>
+            <div class="announcement-div" class=" div1">
                 <h4>Site Maintenance</h4>
-                <p>Our website will undergo maintenance in 2 days to enhance performance and security. Expect brief
-                    downtime
-                    during the process.</p>
+                <p>Our website will undergo maintenance in 2 days. Expect brief downtime.</p>
             </div>
-            <div>
+            <div class="announcement-div" class=" div2">
                 <h4>Community Share Day</h4>
-                <p>Community Share Day is a local event where people come together to exchange resources, ideas, and
-                    support, fostering unity and collaboration.</p>
+                <p>Community Share Day is a local event where people come together to exchange resources and, fostering unity.</p>
             </div>
-            <div>
+            <div class="announcement-div" class=" div3">
                 <h4>Updated Privacy Policy</h4>
                 <p>We’ve updated our Privacy Policy to enhance transparency regarding data collection, usage, and user
-                    rights. Please review the changes carefully.</p>
+                    rights.</p>
+            </div>
+
+            <div class="trending">
+                <h4>Trending</h4>
+                <div>
+                    <h5>@tegan</h5>
+                    <p>World Peace Builder</p>
+                </div>
+                <div>
+                    <h5>@rupesh</h5>
+                    <p>Super Cool Project</p>
+                </div>
+                <div>
+                    <h5>@alex</h5>
+                    <p>Life Changing App</p>
+                </div>
+                <div>
+                    <h5>@kendall</h5>
+                    <p>No Traffic Maker </p>
+                </div>
             </div>
         </div>
-        <div class="trending">
-            <h4>Trending</h4>
-            <div>
-                <h5>@tegan</h5>
-                <p>World Peace Builder</p>
-            </div>
-            <div>
-                <h5>@rupesh</h5>
-                <p>Super Cool Project</p>
-            </div>
-            <div>
-                <h5>@alex</h5>
-                <p>Life Changing App</p>
-            </div>
-            <div>
-                <h5>@kendall</h5>
-                <p>No Traffic Maker </p>
-            </div>
-        </div>
+        
     </div>
 
 </body>
