completed styling announcement section, included trending section in the announcement div

--- a/index.html
+++ b/index.html
@@ -74,44 +74,44 @@
                 <h4>Travel Signup Page</h4>
                 <p> travel page invites users to discover personalized, breathtaking escapes, offering easy signup for
                     adventure, relaxation, and unforgettable experiences.</p>
-                 <div class="imgDiv">
-                <img src="svg/bookmark-outline.svg">
-                 <img src="svg/eye-plus-outline.svg">
-                 <img src="svg/share-variant-outline.svg"> 
-                </div>  
+                <div class="imgDiv">
+                    <img src="svg/bookmark-outline.svg">
+                    <img src="svg/eye-plus-outline.svg">
+                    <img src="svg/share-variant-outline.svg">
+                </div>
             </div>
             <div class="card">
                 <h4>Calculator</h4>
                 <p>A simple and efficient calculator app that allows users to perform basic arithmetic operations
                     quickly
                     and accurately on the go.</p>
-                    <div class="imgDiv">
+                <div class="imgDiv">
                     <img src="svg/bookmark-outline.svg">
-                 <img src="svg/eye-plus-outline.svg">
-                 <img src="svg/share-variant-outline.svg">
-                </div> 
+                    <img src="svg/eye-plus-outline.svg">
+                    <img src="svg/share-variant-outline.svg">
+                </div>
             </div>
             <div class="card">
                 <h4>Etch-a-sketch</h4>
                 <p>Etch-a-Sketch page allows users to draw digital sketches by manipulating controls, providing a fun
                     and
                     interactive creative experience.</p>
-                    <div class="imgDiv">
-                        <img src="svg/bookmark-outline.svg">
-                     <img src="svg/eye-plus-outline.svg">
-                     <img src="svg/share-variant-outline.svg">
-                    </div>
+                <div class="imgDiv">
+                    <img src="svg/bookmark-outline.svg">
+                    <img src="svg/eye-plus-outline.svg">
+                    <img src="svg/share-variant-outline.svg">
+                </div>
             </div>
             <div class="card">
                 <h4>Rock paper scissors</h4>
                 <p>A simple Rock Paper Scissors game webpage where users can play, test their luck, and enjoy quick
                     rounds
                     of interactive fun!</p>
-                    <div class="imgDiv">
-                        <img src="svg/bookmark-outline.svg">
-                     <img src="svg/eye-plus-outline.svg">
-                     <img src="svg/share-variant-outline.svg">
-                    </div>
+                <div class="imgDiv">
+                    <img src="svg/bookmark-outline.svg">
+                    <img src="svg/eye-plus-outline.svg">
+                    <img src="svg/share-variant-outline.svg">
+                </div>
             </div>
             <div class="card">
                 <h4>Landing page</h4>
@@ -120,8 +120,8 @@
                 </p>
                 <div class="imgDiv">
                     <img src="svg/bookmark-outline.svg">
-                 <img src="svg/eye-plus-outline.svg">
-                 <img src="svg/share-variant-outline.svg">
+                    <img src="svg/eye-plus-outline.svg">
+                    <img src="svg/share-variant-outline.svg">
                 </div>
             </div>
             <div class="card">
@@ -129,29 +129,36 @@
                 <p> recipes page features two delicious and easy-to-follow recipes, helping users create tasty meals
                     with
                     step-by-step instructions.</p>
-                    <div class="imgDiv">
-                        <img src="svg/bookmark-outline.svg">
-                     <img src="svg/eye-plus-outline.svg">
-                     <img src="svg/share-variant-outline.svg">
-                    </div>
+                <div class="imgDiv">
+                    <img src="svg/bookmark-outline.svg">
+                    <img src="svg/eye-plus-outline.svg">
+                    <img src="svg/share-variant-outline.svg">
+                </div>
             </div>
         </div>
         <div class="announcements">
-            <div class="announcement-div" class=" div1">
+            <div class="announcement-heading">
+                <h4>Announcements</h4>
+            </div>
+            <div class="announcement-div" class="div1">
                 <h4>Site Maintenance</h4>
-                <p>Our website will undergo maintenance in 2 days. Expect brief downtime.</p>
+                <p>Our website will undergo maintenance in 2 days. Expect brief downtime and further communications will be shared over an email.</p>
             </div>
-            <div class="announcement-div" class=" div2">
+            <div class="announcement-div" class="div2">
                 <h4>Community Share Day</h4>
-                <p>Community Share Day is a local event where people come together to exchange resources and, fostering unity.</p>
+                <p>Community Share Day is a local event where people come together to exchange resources and, fostering
+                    unity.</p>
             </div>
-            <div class="announcement-div" class=" div3">
+            <div class="announcement-div" class="div3">
                 <h4>Updated Privacy Policy</h4>
                 <p>We’ve updated our Privacy Policy to enhance transparency regarding data collection, usage, and user
                     rights.</p>
             </div>
 
             <div class="trending">
+                <div class="trending-heading">
+                    <h4>Trending</h4>
+                </div>
                 <h4>Trending</h4>
                 <div>
                     <h5>@tegan</h5>
@@ -171,7 +178,7 @@
                 </div>
             </div>
         </div>
-        
+
     </div>
 
 </body>
