completed styling the trending section, need to add images

--- a/index.html
+++ b/index.html
@@ -159,20 +159,19 @@
                 <div class="trending-heading">
                     <h4>Trending</h4>
                 </div>
-                <h4>Trending</h4>
-                <div>
+                <div class="trending-div, trending-div1">
                     <h5>@tegan</h5>
                     <p>World Peace Builder</p>
                 </div>
-                <div>
+                <div class="trending-div, trending-div2">
                     <h5>@rupesh</h5>
                     <p>Super Cool Project</p>
                 </div>
-                <div>
+                <div class="trending-div, trending-div3">
                     <h5>@alex</h5>
                     <p>Life Changing App</p>
                 </div>
-                <div>
+                <div class="trending-div, trending-div4">
                     <h5>@kendall</h5>
                     <p>No Traffic Maker </p>
                 </div>
