finished styling trending section, total page styling is completed. no pending sections left

--- a/index.html
+++ b/index.html
@@ -160,20 +160,32 @@
                     <h4>Trending</h4>
                 </div>
                 <div class="trending-div, trending-div1">
-                    <h5>@tegan</h5>
-                    <p>World Peace Builder</p>
+                    <img class="angryAvatar" src="img/angry.jpg" alt="angryAvatar">
+                    <div class="trending-text-div">
+                        <h5>@tegan</h5>
+                        <p>World Peace Builder</p>
+                    </div>
                 </div>
                 <div class="trending-div, trending-div2">
-                    <h5>@rupesh</h5>
-                    <p>Super Cool Project</p>
+                    <img class="catAvatar" src="img/cat.jpg" alt="cat avatar">
+                    <div class="trending-text-div">
+                        <h5>@rupesh</h5>
+                        <p>Super Cool Project</p>
+                    </div>
                 </div>
                 <div class="trending-div, trending-div3">
-                    <h5>@alex</h5>
-                    <p>Life Changing App</p>
+                    <img class="confusedAvatar" src="img/confused.jpg" alt="confusedAvatar">
+                    <div class="trending-text-div">
+                        <h5>@alex</h5>
+                        <p>Life Changing App</p>
+                    </div>
                 </div>
                 <div class="trending-div, trending-div4">
-                    <h5>@kendall</h5>
-                    <p>No Traffic Maker </p>
+                    <img class="angryAvatar" src="img/angry.jpg" alt="angryAvatar">
+                    <div class="trending-text-div">
+                        <h5>@kendall</h5>
+                        <p>No Traffic Maker </p>
+                    </div>
                 </div>
             </div>
         </div>
