added all the project deployed page links to the respective elements, removed default a link styling

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h4>Your Projects</h4>
             </div>
             <div class="card">
-                <h4>Travel Signup Page</h4>
+                <h4><a href="https://rupeshsagaram.github.io/travelWebPageSignUp/">Signup Page</a></h4>
                 <p> travel page invites users to discover personalized, breathtaking escapes, offering easy signup for
                     adventure, relaxation, and unforgettable experiences.</p>
                 <div class="imgDiv">
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="card">
-                <h4>Calculator</h4>
+                <h4><a href="https://rupeshsagaram.github.io/Calculator/">Calculator</a></h4>
                 <p>A simple and efficient calculator app that allows users to perform basic arithmetic operations
                     quickly
                     and accurately on the go.</p>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="card">
-                <h4>Etch-a-sketch</h4>
+                <h4><a href="https://rupeshsagaram.github.io/Etch-a-sketch/">Etch-a-sketch</a></h4>
                 <p>Etch-a-Sketch page allows users to draw digital sketches by manipulating controls, providing a fun
                     and
                     interactive creative experience.</p>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="card">
-                <h4>Rock paper scissors</h4>
+                <h4><a href="https://rupeshsagaram.github.io/RockPaperScissors/">Rock paper scissors</a></h4>
                 <p>A simple Rock Paper Scissors game webpage where users can play, test their luck, and enjoy quick
                     rounds
                     of interactive fun!</p>
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="card">
-                <h4>Landing page</h4>
+                <h4><a href="https://rupeshsagaram.github.io/landing-page/">Landing page</a></h4>
                 <p> landing page promotes compassionate therapy services, offering a safe space and various therapeutic
                     approaches to support personal growth and healing.
                 </p>
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="card">
-                <h4>Odin recipes</h4>
+                <h4><a href="https://rupeshsagaram.github.io/odin-recipes/">Odin recipes</a></h4>
                 <p> recipes page features two delicious and easy-to-follow recipes, helping users create tasty meals
                     with
                     step-by-step instructions.</p>
